--- a/_posts/2017-03-19-two.markdown
+++ b/_posts/2017-03-19-two.markdown
@@ -1,7 +1,10 @@
 ---
 layout: post
 title:  "222"
+author: "pengchen"
 date:   2017-03-19 09:51:24 +0800
+illustration: "/peng/resource/images/test02.jpg"
+description: "You’ll find thisasasaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa post in your You’ll find this post in your You’ll find this post in your `_posts` directory directory directory"
 categories: blog
 ---
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
