--- a/_posts/2017-03-19-one.markdown
+++ b/_posts/2017-03-19-one.markdown
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: article
 title:  "111"
 author: "pengchen"
 date:   2017-05-22 09:51:24 +0800
@@ -7,6 +7,7 @@ illustration: "/peng/resource/images/test01.jpg"
 description: "You’ll find this post in your You’ll find this post in your You’ll find this post in your `_posts` directory directory directory"
 categories: blog
 ---
+
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
 To add new posts, simply add a file in the `_posts` directory that follows the convention `YYYY-MM-DD-name-of-post.ext` and includes the necessary front matter. Take a look at the source for this post to get an idea about how it works.
