--- a/_posts/2017-03-20-02.markdown
+++ b/_posts/2017-03-20-02.markdown
@@ -3,7 +3,7 @@ layout: article
 title:  "CSS揭秘整理之半透明边框"
 author: "pengchen"
 date:   2017-05-22 09:51:24 +0800
-illustration: "/resource/images/css.jpg"
+illustration: "/peng/resource/images/css.jpg"
 description: "You’ll find this post in your You’ll find this post in your You’ll find this post in your `_posts` directory directory directory"
 categories: blog
 ---
