--- a/_posts/2017-05-25-06.markdown
+++ b/_posts/2017-05-25-06.markdown
@@ -3,8 +3,8 @@ layout: article
 title:  "CSS Grid 网格布局"
 author: "pengchen"
 date:   2017-05-22 09:51:24 +0800
-illustration: "/resource/images/test03.jpg"
-description: "You’ll find this post in your You’ll find this post in your You’ll find this post in your `_posts` directory directory directory"
+illustration: "/resource/images/css.jpg"
+description: "CSS Grid是一个强大的 web 二维布局工具，能够以行和列来进行布局。"
 categories: blog
 ---
 
