--- a/_posts/2017-01-12-01.markdown
+++ b/_posts/2017-01-12-01.markdown
@@ -1,6 +1,6 @@
 ---
 layout: article
-title:  "数字图像算法—图像二值化 JavaScript实现"
+title:  "数字图像算法——图像二值化"
 author: "pengchen"
 date:   2017-01-12
 illustration: "/resource/images/js.jpg"
