--- a/_posts/2017-01-11-01.markdown
+++ b/_posts/2017-01-11-01.markdown
@@ -1,6 +1,6 @@
 ---
 layout: article
-title:  "数字图像算法—256色转灰度图 JavaScript实现"
+title:  "数字图像算法——256色转灰度图"
 author: "pengchen"
 date:   2017-01-11
 illustration: "/resource/images/js.jpg"
