--- a/_posts/2018-11-28-01.markdown
+++ b/_posts/2018-11-28-01.markdown
@@ -1,6 +1,6 @@
 ---
 layout: article
-title:  "前端mock接口服务脚手架【ap-cli】"
+title:  "mock接口服务脚手架【ap-cli】"
 author: "pengchen"
 date:   2018-11-28
 illustration: "/resource/images/cover/ap_cli.png"
@@ -10,6 +10,7 @@ categories: blog
 
 # ap-cli [![npm version](https://badge.fury.io/js/ap-cli.svg)](http://badge.fury.io/js/ap-cli) [![Build Status](https://travis-ci.org/PengChen96/ap-cli.svg?branch=master)](https://travis-ci.org/PengChen96/ap-cli)
 <!--[![NPM version](https://img.shields.io/npm/v/ap-cli.svg?style=flat)](https://www.npmjs.com/package/ap-cli)-->
+
 > 依据接口定义，帮助你快速的完成接口模拟工作。
 
 **主要功能：**  
