--- a/_posts/2018-11-28-01.markdown
+++ b/_posts/2018-11-28-01.markdown
@@ -61,7 +61,7 @@ $ ap-cli -m data.json
 json模板格式查看[完整模板及说明](#完整模板及说明)
 
 ## 使用
-1. #### 通过js方式模拟数据
+#### 通过js方式模拟数据
 格式查看[完整模板及说明](#完整模板及说明)
 ##### data.js
 ```
@@ -95,7 +95,7 @@ $ ap-cli -m data.js
 ##### 查看接口
 http://localhost:3000/api/get/userList
 
-2. #### 通过swagger文件模拟数据
+#### 通过swagger文件模拟数据
 这种方式主要是通过swagger生成一个xx_new.json文件，然后进行模拟数据
 ```
 # 运行会生成一个swagger_new.json文件
@@ -104,7 +104,7 @@ $ ap-cli -s swagger.json
 $ ap-cli -m swagger_new.json
 ```
 
-3. #### 通过正则匹配指定要模拟的文件
+#### 通过正则匹配指定要模拟的文件
 当前目录下有3个文件a1.json、a2.js、b1.js,你可以通过正则只模拟a1.json和a2.js文件的数据。
 ```
 $ ap-cli -m all -r /^a/
