--- a/_posts/2018-11-28-01.markdown
+++ b/_posts/2018-11-28-01.markdown
@@ -8,12 +8,11 @@ description: "依据接口定义，帮助你快速的完成接口模拟工作。
 categories: blog
 ---
 
-# ap-cli [![npm version](https://badge.fury.io/js/ap-cli.svg)](http://badge.fury.io/js/ap-cli) [![Build Status](https://travis-ci.org/PengChen96/ap-cli.svg?branch=master)](https://travis-ci.org/PengChen96/ap-cli)
+# [ap-cli](https://github.com/PengChen96/ap-cli) [![npm version](https://badge.fury.io/js/ap-cli.svg)](http://badge.fury.io/js/ap-cli) [![Build Status](https://travis-ci.org/PengChen96/ap-cli.svg?branch=master)](https://travis-ci.org/PengChen96/ap-cli)
 <!--[![NPM version](https://img.shields.io/npm/v/ap-cli.svg?style=flat)](https://www.npmjs.com/package/ap-cli)-->
-
 > 依据接口定义，帮助你快速的完成接口模拟工作。
 
-**主要功能：**  
+**主要功能：**
 - [x] 通过json、js、swagger文件模拟接口数据
 - [x] 通过正则匹配指定需要mock的文件
 - [x] 生成简单markdown接口文档
