--- a/_posts/2017-08-01-01.markdown
+++ b/_posts/2017-08-01-01.markdown
@@ -3,6 +3,8 @@ layout: article
 title:  "Python3 websocket通信"
 author: "pengchen"
 date:   2017-08-01
+source: "原创"
+type: "python | socket"
 illustration: "/resource/images/python.jpg"
 description: "WebSocket协议是基于TCP的一种新的网络协议。它实现了浏览器与服务器全双工(full-duplex)通信——允许服务器主动发送信息给客户端。"
 categories: blog
