--- a/_posts/2017-08-14-01.markdown
+++ b/_posts/2017-08-14-01.markdown
@@ -3,6 +3,8 @@ layout: article
 title:  "CSS Grid 网格布局"
 author: "pengchen"
 date:   2017-08-14
+source: "原创"
+type: "CSS"
 illustration: "/resource/images/cover/css03.jpg"
 description: "CSS Grid是一个强大的 web 二维布局工具，能够以行和列来进行布局。"
 categories: blog
